deps/v8/test/message/fail/arrow-formal-parameters.out
*%(basename)s:5: SyntaxError: Duplicate parameter name not allowed in this context
(b, a, a, d) => a
       ^
SyntaxError: Duplicate parameter name not allowed in this context
